--- a/src/input.css
+++ b/src/input.css
@@ -7,6 +7,7 @@
     }
     .after{
         @apply after:content-normal after:h-[2px] after:bg-[#0da487] after:bottom-0 after:left-0 after:absolute after:w-[120px] pb-4; 
+
     }
     .s-h{
         box-shadow: 0px 0px 10px -5px gray;
@@ -19,7 +20,7 @@
         @apply font-bold text-[16px] !important;
     }
     .zindex-11{
-        @apply z-[111] !important;
+        @apply z-[11]  !important;
     }
 }
 *,
@@ -30,9 +31,21 @@
     @apply text-white bg-[#0da487];
 }
 .overlay{
-    @apply after:content-normal after:w-full after:h-full after:bg-[#000000a1] after:top-0 after:left-0 after:absolute after:z-10; 
+    @apply w-full h-[100%] bg-[#000000a1] top-0 left-0 absolute z-[11]; 
 }
 .tr-lt{
     @apply -translate-y-[50%] opacity-[1] !important ; 
+}
+.tr-lt-none{
+    @apply -translate-y-[60%] opacity-[0] !important ; 
+}
+.btn{
+    @apply w-fit text-[16px] mb-5 p-3 lg:hidden !important;
+}
+.toRight{
+    @apply left-0 !important;
+}
+.btnclose{
+    @apply absolute right-2 top-2 bg-gray-400 w-5 p-4 flex justify-center items-center h-5 text-white font-bold rounded-full z-10 lg:hidden !important;
 }
 @tailwind utilities;
