complete prancipel changes

--- a/src/input.css
+++ b/src/input.css
@@ -40,6 +40,9 @@
     @apply bg-[#000000a8] w-full h-[100vh] absolute left-0 top-0 z-[11];
 }
 .animate{
-    @apply top-[50%] opacity-[1] !important;
+    @apply xl:top-[50%] opacity-[1] !important;
+}
+.l-0{
+    @apply left-0 !important;
 }
 @tailwind utilities;
